force-app/main/default/objects/CallRevu_Lead__c/fields/MQL_to_SQL_Time__c.field-meta.xml
<CustomField>
    <fullName>MQL_to_SQL_Time__c</fullName>
    <formula>( SQL_Date_Time__c -  MQL_Date_Time__c ) *24 * 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MQL to SQL Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>