force-app/main/default/objects/CallRevu_Lead__c/fields/Nurture_Date__c.field-meta.xml
<CustomField>
    <fullName>Nurture_Date__c</fullName>
    <label>Nurture Date</label>
    <type>Date</type>
</CustomField>