force-app/main/default/objects/CallRevu_Lead__c/fields/Nurture_Reason__c.field-meta.xml
<CustomField>
    <fullName>Nurture_Reason__c</fullName>
    <label>Nurture Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>Not Currently a Fit</fullName>
            </value>
            <value>
                <fullName>Using a Competitor</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>