force-app/main/default/objects/CallRevu_Lead__c/fields/Nurture_Reason_Details__c.field-meta.xml
<CustomField>
    <fullName>Nurture_Reason_Details__c</fullName>
    <label>Nurture Reason Details</label>
    <type>TextArea</type>
</CustomField>