force-app/main/default/objects/CallRevu_Lead__c/fields/OEM_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>OEM_Account_Status__c</fullName>
    <formula>TEXT(Contact__r.Account.OEM_Account_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OEM Account Status</label>
    <type>Text</type>
</CustomField>