force-app/main/default/objects/CallRevu_Lead__c/fields/Opportunity_Stage_on_Close__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage_on_Close__c</fullName>
    <label>Opportunity Stage on Close</label>
    <length>40</length>
    <type>Text</type>
</CustomField>