force-app/main/default/objects/CallRevu_Lead__c/fields/Owner_Filter__c.field-meta.xml
<CustomField>
    <fullName>Owner_Filter__c</fullName>
    <formula>CallRevu_Lead_Owner__c = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Filter</label>
    <type>Checkbox</type>
</CustomField>