force-app/main/default/objects/CallRevu_Lead__c/fields/Owner_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Owner_Identifier__c</fullName>
    <formula>CallRevu_Lead_Owner__r.Profile.Name &amp; &quot;, &quot; &amp;  IF(CallRevu_Lead_Owner__r.IsActive = True, &quot;Active&quot;, &quot;Inactive&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Identifier</label>
    <type>Text</type>
</CustomField>