force-app/main/default/objects/CallRevu_Lead__c/fields/Recent_Conversion_Date__c.field-meta.xml
<CustomField>
    <fullName>Recent_Conversion_Date__c</fullName>
    <label>Recent Conversion Date</label>
    <type>TextArea</type>
</CustomField>