force-app/main/default/objects/CallRevu_Lead__c/fields/Reseller_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Account_Status__c</fullName>
    <formula>Contact__r.Reseller_Account_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reseller Account Status</label>
    <type>Text</type>
</CustomField>