force-app/main/default/objects/CallRevu_Lead__c/fields/Resend_Email_Alert__c.field-meta.xml
<CustomField>
    <fullName>Resend_Email_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resend Email Alert</label>
    <type>Checkbox</type>
</CustomField>