force-app/main/default/objects/CallRevu_Lead__c/fields/Sales_Generated_Lead__c.field-meta.xml
<CustomField>
    <fullName>Sales_Generated_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Lead generated by the BDR/Sales Team</inlineHelpText>
    <label>Sales Generated Lead</label>
    <type>Checkbox</type>
</CustomField>