force-app/main/default/objects/CallRevu_Lead__c/fields/Sales_Generated_Lead_Dat__c.field-meta.xml
<CustomField>
    <fullName>Sales_Generated_Lead_Dat__c</fullName>
    <inlineHelpText>Date Lead was sent to Sales</inlineHelpText>
    <label>Sales Generated Lead Date</label>
    <type>Date</type>
</CustomField>