force-app/main/default/objects/CallRevu_Lead__c/fields/Sales_Group_Account_Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>Sales_Group_Account_Decision_Maker__c</fullName>
    <formula>Account__r.Sales_Group_Account_Decision_Maker__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Group Account Decision Maker</label>
    <type>Text</type>
</CustomField>