force-app/main/default/objects/CallRevu_Lead__c/fields/Sales_Group_Level_Account_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Sales_Group_Level_Account_Segmentation__c</fullName>
    <formula>Account__r.Sales_Group_Level_Account_Segmentation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Group Level Account Segmentation</label>
    <type>Text</type>
</CustomField>