force-app/main/default/objects/CallRevu_Lead__c/fields/Sales_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Sales_Reporting__c</fullName>
    <label>Sales Reporting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Sales</fullName>
            </value>
            <value>
                <fullName>Channel Sales</fullName>
            </value>
            <value>
                <fullName>National Accounts</fullName>
            </value>
            <value>
                <fullName>Agency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>