force-app/main/default/objects/CallRevu_Lead__c/fields/Secondary_Email__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Email__c</fullName>
    <formula>Contact__r.Secondary_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Email</label>
    <type>Text</type>
</CustomField>