force-app/main/default/objects/CallRevu_Lead__c/fields/SQL_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>SQL_Date_Time__c</fullName>
    <label>SQL Date/Time</label>
    <type>DateTime</type>
</CustomField>