force-app/main/default/objects/CallRevu_Lead__c/fields/Start_CQL_Cadence__c.field-meta.xml
<CustomField>
    <fullName>Start_CQL_Cadence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Start CQL Cadence</label>
    <type>Checkbox</type>
</CustomField>