force-app/main/default/objects/CallRevu_Lead__c/fields/Tier_2_Type__c.field-meta.xml
<CustomField>
    <fullName>Tier_2_Type__c</fullName>
    <label>Tier 2 Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Opportunity_Record_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ad Agency - Client</fullName>
            </value>
            <value>
                <fullName>Ad Agency - Reseller</fullName>
            </value>
            <value>
                <fullName>ADDP</fullName>
            </value>
            <value>
                <fullName>CDK</fullName>
            </value>
            <value>
                <fullName>Drive Centric</fullName>
            </value>
            <value>
                <fullName>eLead</fullName>
            </value>
            <value>
                <fullName>GM DDS</fullName>
            </value>
            <value>
                <fullName>GTC</fullName>
            </value>
            <value>
                <fullName>HDS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>