force-app/main/default/objects/CallRevu_Lead__c/fields/Unique_Forms_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Unique_Forms_Submitted__c</fullName>
    <label>Unique Forms Submitted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>