force-app/main/default/objects/CallRevu_Lead__c/fields/Unqualified_Date__c.field-meta.xml
<CustomField>
    <fullName>Unqualified_Date__c</fullName>
    <label>Unqualified Date</label>
    <type>Date</type>
</CustomField>