force-app/main/default/objects/CallRevu_Lead__c/fields/Unqualified_Reason_Details__c.field-meta.xml
<CustomField>
    <fullName>Unqualified_Reason_Details__c</fullName>
    <label>Unqualified Reason Details</label>
    <type>TextArea</type>
</CustomField>