force-app/main/default/objects/CallRevu_Lead__c/fields/Warm_Date__c.field-meta.xml
<CustomField>
    <fullName>Warm_Date__c</fullName>
    <label>Warm Date</label>
    <type>DateTime</type>
</CustomField>