force-app/main/default/objects/CallRevu_Lead__c/fields/Warm_to_Bad_Unqualified__c.field-meta.xml
<CustomField>
    <fullName>Warm_to_Bad_Unqualified__c</fullName>
    <formula>Unqualified_Date__c - DATEVALUE(Warm_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warm to Bad/Unqualified</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>