force-app/main/default/objects/CallRevu_Lead__c/fields/Warm_to_Duplicate__c.field-meta.xml
<CustomField>
    <fullName>Warm_to_Duplicate__c</fullName>
    <formula>Duplicate_Date__c - Warm_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warm to Duplicate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>