force-app/main/default/objects/CallRevu_Lead__c/fields/Warm_to_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Warm_to_Opportunity__c</fullName>
    <formula>Opportunity_Closed_Date__c - DATEVALUE(Warm_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warm to Opportunity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>