force-app/main/default/objects/CallRevu_Lead__c/fields/X18_Digit_CallRevu_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Digit_CallRevu_Lead_ID__c</fullName>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 Digit CallRevu Lead ID</label>
    <type>Text</type>
</CustomField>