force-app/main/default/objects/CallRevu_Lead__c/recordTypes/Contact_Lead.recordType-meta.xml
<RecordType>
    <fullName>Contact_Lead</fullName>
    <active>true</active>
    <label>Contact Lead</label>
</RecordType>