force-app/main/default/objects/CallRevu_Lead__c/validationRules/Cannot_Change_Sources_on_Lead.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_Sources_on_Lead</fullName>
    <active>false</active>
    <errorConditionFormula>AND(CASE($Profile.Name,&quot;System Administrator&quot;, 1, &quot;CallRevu Marketing User&quot;,1, 0 ) &lt;&gt; 1,

AND(NOT(ISBLANK(MQL_Date_Time__c))),
AND(ISCHANGED(CallRevu_Lead_Channel__c),
NOT(ISBLANK(TEXT(CallRevu_Lead_Channel__c))),
NOT(ISBLANK(TEXT(PRIORVALUE(CallRevu_Lead_Channel__c))))))

||

AND(CASE($Profile.Name,&quot;System Administrator&quot;, 1, &quot;CallRevu Marketing User&quot;,1, 0 ) &lt;&gt; 1,

AND(NOT(ISBLANK(MQL_Date_Time__c))),
AND(ISCHANGED(CallRevu_Lead_Sub_Source__c),
NOT(ISBLANK(TEXT(CallRevu_Lead_Sub_Source__c))),
NOT(ISBLANK(TEXT(PRIORVALUE(CallRevu_Lead_Sub_Source__c))))))

||

AND(CASE($Profile.Name,&quot;System Administrator&quot;, 1, &quot;CallRevu Marketing User&quot;,1, 0 ) &lt;&gt; 1,

AND(NOT(ISBLANK(MQL_Date_Time__c))),
AND(ISCHANGED(CallRevu_Lead_Source__c),
NOT(ISBLANK(TEXT(CallRevu_Lead_Source__c))),
NOT(ISBLANK(TEXT(PRIORVALUE(CallRevu_Lead_Source__c))))))</errorConditionFormula>
    <errorMessage>ERROR #01-CL: You do not have permission to change Marketing source. Please contacting Marketing@callrevu.com</errorMessage>
</ValidationRule>