force-app/main/default/objects/CallRevu_Lead__c/validationRules/Cannot_Close_Before_Opportunity_Close.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Close_Before_Opportunity_Close</fullName>
    <active>true</active>
    <description>You cannot mark a CallRevu Lead as Closed Lost. This must be set from the Opportunity</description>
    <errorConditionFormula>AND($Profile.Name = &apos;CallRevu Sales&apos;,
AND(TEXT(Status__c)= &quot;Closed Lost&quot;,
AND(Current_Opportunity_Stage__c != &quot;Closed Lost&quot;)))</errorConditionFormula>
    <errorMessage>ERROR #02-CL: CallRevu lead is tied to an Opportunity, you cannot close this as Closed Won</errorMessage>
</ValidationRule>