force-app/main/default/objects/CallRevu_Lead__c/validationRules/Record_Type_Needed.validationRule-meta.xml
<ValidationRule>
    <fullName>Record_Type_Needed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(Status__c),
AND(TEXT(Status__c)=&quot;New Opportunity&quot;),
AND(TEXT(Opportunity_Record_Type__c)=&quot;&quot;))</errorConditionFormula>
    <errorMessage>ERROR #06-CL: Opportunity Record types is required before proceeding forward</errorMessage>
</ValidationRule>