force-app/main/default/objects/CallRevu_Lead__c/listViews/All_ABM_Leads.listView-meta.xml
<ListView>
    <fullName>All_ABM_Leads</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CallRevu_Lead_Owner__c</columns>
    <columns>Campaign__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsClosed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Campaign__c</field>
        <operation>startsWith</operation>
        <value>ABM Secret</value>
    </filters>
    <label>All ABM Leads</label>
</ListView>