force-app/main/default/objects/CallRevu_Lead__c/listViews/All_MQL_s.listView-meta.xml
<ListView>
    <fullName>All_MQL_s</fullName>
    <columns>CallRevu_Lead_Sub_Source__c</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contact_Email__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Lifecycle_Stage__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Status__c</columns>
    <columns>CallRevu_Lead_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MQL_Date_Time__c</field>
        <operation>greaterOrEqual</operation>
        <value>12/31/2020 12:00 AM</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_MONTH</value>
    </filters>
    <label>All MQL&apos;s</label>
</ListView>