force-app/main/default/objects/CallRevu_Lead__c/listViews/All_SQL_s.listView-meta.xml
<ListView>
    <fullName>All_SQL_s</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contact_Email__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Lifecycle_Stage__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2020 12:00 AM</value>
    </filters>
    <filters>
        <field>SQL_Date_Time__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All SQL&apos;s</label>
</ListView>