force-app/main/default/objects/CallRevu_Lead__c/listViews/BG_VIP_Profit_Center_2022.listView-meta.xml
<ListView>
    <fullName>BG_VIP_Profit_Center_2022</fullName>
    <columns>NAME</columns>
    <columns>Account_Owner__c</columns>
    <columns>CallRevu_Lead_Owner__c</columns>
    <columns>CallRevu_Lead_Channel__c</columns>
    <columns>CallRevu_Lead_Source__c</columns>
    <columns>CallRevu_Lead_Sub_Source__c</columns>
    <columns>Campaign__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Campaign__c</field>
        <operation>equals</operation>
        <value>BG VIP Profit Center 2022</value>
    </filters>
    <filters>
        <field>LAST_ACTIVITY</field>
        <operation>greaterOrEqual</operation>
    </filters>
    <label>BG VIP Profit Center 2022</label>
</ListView>