force-app/main/default/objects/CallRevu_Lead__c/listViews/Copy_of_Driving_Sales_Leads_2024.listView-meta.xml
<ListView>
    <fullName>Copy_of_Driving_Sales_Leads_2024</fullName>
    <columns>CallRevu_Lead_Owner__c</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Contact_Mobile__c</columns>
    <columns>Status__c</columns>
    <columns>MQL_Date_Time__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Campaign__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CallRevu_Lead_Owner__c</field>
        <operation>contains</operation>
        <value>Shauna,Nathan,Emily</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Kristie Jaecklein</value>
    </filters>
    <label>BDM Campaigns</label>
</ListView>