force-app/main/default/objects/CallRevu_Lead__c/listViews/Driving_Sales_Leads.listView-meta.xml
<ListView>
    <fullName>Driving_Sales_Leads</fullName>
    <columns>CallRevu_Lead_Owner__c</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Contact_Mobile__c</columns>
    <columns>Status__c</columns>
    <columns>MQL_Date_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Campaign__c</field>
        <operation>equals</operation>
        <value>Driving Sales Webinar</value>
    </filters>
    <label>Driving Sales Leads - 2024</label>
</ListView>